Snapshot: severity collapse trigger, D2D fixes (elapsed clock, Sa=2min, sub-lot routes prep), deploy scripts
Guarda el estado actual antes de integrar feature/timezone-contract: trigger de colapso
por sobrecarga severa (3+ aeropuertos >=120%), fix de precision en daysElapsed (toMillis),
Sa=2min en dia a dia, scripts de despliegue y preparacion de la prueba D2D.